[gd_scene load_steps=13 format=3 uid="uid://c41mku3pthk03"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_bnikp"]
[ext_resource type="Texture2D" uid="uid://barjrskiajsnl" path="res://assets/sprites/ui/main_menu.png" id="2_20bko"]
[ext_resource type="PackedScene" uid="uid://dgyp53n3k4kvp" path="res://scenes/inventory/inventory.tscn" id="3_hbg71"]
[ext_resource type="Shader" path="res://assets/shaders/god_ray.gdshader" id="3_vi7np"]
[ext_resource type="PackedScene" uid="uid://dw0a6getl6jwy" path="res://scenes/ui/components/close_button.tscn" id="4_d3c7f"]
[ext_resource type="Shader" path="res://assets/shaders/nubula.gdshader" id="4_spncr"]
[ext_resource type="StyleBox" uid="uid://d1gubnww8bqar" path="res://assets/theme/menu_button.tres" id="8_g1vpo"]
[ext_resource type="StyleBox" uid="uid://cdlfr5khlf7jn" path="res://assets/theme/menu_button_focus.tres" id="9_gcmuj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mvik5"]
shader = ExtResource("3_vi7np")
shader_parameter/angle = 0.6
shader_parameter/position = 0.2
shader_parameter/spread = 0.425
shader_parameter/cutoff = 0.122
shader_parameter/falloff = 0.265
shader_parameter/edge_fade = 0.322
shader_parameter/speed = 2.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.365
shader_parameter/color = Color(1, 0.9, 0.65, 0.8)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k81dv"]
shader = ExtResource("4_spncr")
shader_parameter/OCTAVE = 2
shader_parameter/timescale = 2.0
shader_parameter/CLOUD1_COL = Color(0.41, 0.64, 0.78, 0.4)
shader_parameter/CLOUD2_COL = Color(0.99, 0.79, 0.46, 0.2)
shader_parameter/CLOUD3_COL = Color(0.811765, 0.309804, 0.588235, 0.372549)
shader_parameter/CLOUD4_COL = Color(0.270588, 0.14902, 0.329412, 0.305882)
shader_parameter/SPACE = Color(0.0901961, 0.0588235, 0.278431, 0.572549)
shader_parameter/zoomScale = 10.0
shader_parameter/size = 10.0
shader_parameter/starscale = 20.0
shader_parameter/opacity = 0.4
shader_parameter/prob = 0.98

[sub_resource type="GDScript" id="GDScript_i0hms"]
script/source = "extends ColorRect


func _ready():
	mouse_filter = Control.MOUSE_FILTER_STOP  # Make sure to capture the input
	custom_minimum_size = get_viewport_rect().size
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jhw1v"]
content_margin_left = 10.0
content_margin_top = 2.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0.2, 0.211765, 0.215686, 0.898039)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.960784, 0.717647, 0.521569, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 3
shadow_offset = Vector2(1, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_bnikp")

[node name="BackgroundContainer" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="BackgroundContainer"]
position = Vector2(2464, 540)
texture = ExtResource("2_20bko")

[node name="ColorRect" type="ColorRect" parent="BackgroundContainer"]
material = SubResource("ShaderMaterial_mvik5")
offset_left = 1872.0
offset_right = 3608.0
offset_bottom = 840.0

[node name="MenuGroup" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="ModalBG" type="ColorRect" parent="MenuGroup"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_k81dv")
color = Color(0, 0, 0, 1)
script = SubResource("GDScript_i0hms")

[node name="Inventory" parent="MenuGroup" instance=ExtResource("3_hbg71")]
unique_name_in_owner = true
visible = false

[node name="CloseButton" parent="MenuGroup/Inventory" instance=ExtResource("4_d3c7f")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = 584.0
offset_top = -308.0
offset_right = 584.0
offset_bottom = -308.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonControl" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="ButtonControl"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -390.0
offset_top = -67.0
offset_right = 390.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 25

[node name="ButtonContainer" type="HBoxContainer" parent="ButtonControl/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Travel" type="Button" parent="ButtonControl/MarginContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.898039, 0.898039, 0.898039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = ExtResource("9_gcmuj")
theme_override_styles/hover = SubResource("StyleBoxFlat_jhw1v")
theme_override_styles/pressed = ExtResource("8_g1vpo")
theme_override_styles/normal = ExtResource("8_g1vpo")
text = "Travel
"

[node name="Storage" type="Button" parent="ButtonControl/MarginContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = ExtResource("9_gcmuj")
theme_override_styles/hover = SubResource("StyleBoxFlat_jhw1v")
theme_override_styles/pressed = ExtResource("8_g1vpo")
theme_override_styles/normal = ExtResource("8_g1vpo")
text = "Storage"

[node name="Skills" type="Button" parent="ButtonControl/MarginContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = ExtResource("9_gcmuj")
theme_override_styles/hover = SubResource("StyleBoxFlat_jhw1v")
theme_override_styles/pressed = ExtResource("8_g1vpo")
theme_override_styles/normal = ExtResource("8_g1vpo")
text = "Skills"

[node name="Crafting" type="Button" parent="ButtonControl/MarginContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = ExtResource("9_gcmuj")
theme_override_styles/hover = SubResource("StyleBoxFlat_jhw1v")
theme_override_styles/pressed = ExtResource("8_g1vpo")
theme_override_styles/normal = ExtResource("8_g1vpo")
text = "Crafting"

[node name="Alchemy" type="Button" parent="ButtonControl/MarginContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = ExtResource("9_gcmuj")
theme_override_styles/hover = SubResource("StyleBoxFlat_jhw1v")
theme_override_styles/pressed = ExtResource("8_g1vpo")
theme_override_styles/normal = ExtResource("8_g1vpo")
text = "Alchemy"

[node name="Quests" type="Button" parent="ButtonControl/MarginContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = ExtResource("9_gcmuj")
theme_override_styles/hover = SubResource("StyleBoxFlat_jhw1v")
theme_override_styles/pressed = ExtResource("8_g1vpo")
theme_override_styles/normal = ExtResource("8_g1vpo")
text = "Quests"

[connection signal="gui_input" from="MenuGroup/ModalBG" to="." method="_on_modal_bg_gui_input"]
